Home page changers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <img src="images/logo.png" class="logo">
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Main</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skill-areas">Technologies</a></li>
                 <li><a href="#projects">Projects</a></li>
